src/app.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
	--grid: repeat(auto-fill, 210px);
}

html {
	height: 100%;
}

body {
	height: 100%;
	font-family: 'Poppins', var(--font-sans);
	color: var(--gray-0);
	background: linear-gradient(hsl(220 20% 10%), hsl(220 20% 16%));
	background-attachment: fixed;
}

a {
	color: var(--gray-4);
	text-decoration: none;
}

a:hover {
	color: var(--gray-0);
}

img {
	width: 100%;
	display: block;
	border-radius: 8px;
	border-radius: var(--radius-3);
}

button {
	font: inherit;
	border: none;
	border-radius: var(--radius-3);
	cursor: pointer;
}

fieldset {
	border: none;
}

.grid .heading {
	padding-top: var(--size-7);
	padding-bottom: var(--size-2);
}

.grid .items {
	display: grid;
	grid-template-columns: var(--grid);
	gap: var(--size-7);
}

.grid .item {
	position: relative;
	box-shadow: var(--shadow-3);
}

.grid .item a {
	transition: opacity 0.3s;
}

.grid .item form {
	position: absolute;
	left: var(--size-1);
	bottom: var(--size-1);
	font-size: var(--size-7);
}

.grid .item button {
	background: none;
	transition: transform 0.1s;
}

.grid .item button:active {
	transform: scale(0.8);
}

.grid .item .completed {
	opacity: 0.2;
}

.grid .item + .title {
	padding-top: var(--size-2);
}

